@@ -331,7 +331,7 @@ panel commands.
     gpr          display or alter general purpose registers
     fpr          display floating point registers
     fpc          display floating point control register
-    cr           display control registers
+    cr           display or alter control registers
     ar           display access registers
     pr           display prefix register
     timerint     display or set timers update interval
