@@ -1,3 +1,4 @@
+24 Aug 2007 Modify control registers by cr command - Roger Bowler
 16 Aug 2007 Backout 28 Jul fix for LCS (fix was only meant for CTCI) - Fish
 06 Aug 2007 Rework CPU execution loop - Greg
 06 Aug 2007 Filled ipl, iplc, sysclear, sysreset in HELPTAB - Ivan Warren
